[gd_scene load_steps=2 format=3 uid="uid://pf6ll5b8yehg"]

[ext_resource type="Script" path="res://game_panel.gd" id="1_rctj1"]

[node name="GamePanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rctj1")

[node name="SettingsPanel" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="NewGameButton" type="Button" parent="SettingsPanel"]
layout_mode = 2
text = "New game"

[node name="VSeparator" type="VSeparator" parent="SettingsPanel"]
layout_mode = 2

[node name="ColumnsLabel" type="Label" parent="SettingsPanel"]
layout_mode = 2
text = "Columns:"

[node name="ColumnsSpinBox" type="SpinBox" parent="SettingsPanel"]
layout_mode = 2
min_value = 2.0
max_value = 1000.0
value = 3.0

[node name="RowsLabel" type="Label" parent="SettingsPanel"]
layout_mode = 2
text = "Rows:"

[node name="RowsSpinBox" type="SpinBox" parent="SettingsPanel"]
layout_mode = 2
min_value = 2.0
max_value = 1000.0
value = 3.0

[node name="VSeparator2" type="VSeparator" parent="SettingsPanel"]
layout_mode = 2

[node name="SetSizeButton" type="Button" parent="SettingsPanel"]
layout_mode = 2
text = "Set size"

[node name="Game" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="GameButtons" type="GridContainer" parent="Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
columns = 3

[node name="Overlay" type="Control" parent="Game"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="SettingsPanel/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="SettingsPanel/SetSizeButton" to="." method="_on_set_size_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
